<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one" />

            <Button
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two" />

            <Button
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four" />

            <Button
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five" />

            <Button
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven" />

            <Button
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eight" />

            <Button
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nine" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/ten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ten" />

            <Button
                android:id="@+id/eleven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eleven" />

            <Button
                android:id="@+id/twelve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twelve" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/thirteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thirteen" />

            <Button
                android:id="@+id/fourteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourteen" />

            <Button
                android:id="@+id/fifteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifteen" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sixteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixteen" />

            <Button
                android:id="@+id/seventeen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seventeen" />

            <Button
                android:id="@+id/eighteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eighteen" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/nineteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nineteen" />

            <Button
                android:id="@+id/twenty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twenty" />

            <Button
                android:id="@+id/twenty_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twenty_one" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/twenty_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twenty_two" />

            <Button
                android:id="@+id/twenty_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twenty_three" />

            <Button
                android:id="@+id/twenty_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twenty_four" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/twenty_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twenty_five" />

            <Button
                android:id="@+id/twenty_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twenty_six" />

            <Button
                android:id="@+id/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear" />

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add" />

            <Button
                android:id="@+id/subtract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtract" />

            <Button
                android:id="@+id/point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiply" />

            <Button
                android:id="@+id/divide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divide" />

            <Button
                android:id="@+id/exponential"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exponential" />

            <Button
                android:id="@+id/equals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equals" />
        </TableRow>

    </TableLayout>
</LinearLayout>